group 'com.patrickubelhor'
version '6.2.4'

apply plugin: 'java'
apply plugin: 'application'

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

application {
	mainClass.set('main.Bot')
}


repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
	maven { url 'https://maven.lavalink.dev/releases' }
}

dependencies {
	implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '3.0.0'
	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.23.1'
	implementation group: 'dev.arbjerg',				name: 'lavaplayer',		version: '2.2.2'
	implementation group: 'dev.lavalink.youtube',		name: 'v2',				version: '1.8.3'
	implementation group: 'net.dv8tion',                name: 'JDA',            version: '5.1.1'
	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.12.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.17.2'
}

jar {
	duplicatesStrategy = DuplicatesStrategy.INCLUDE

	manifest {
		attributes(
			'Implementation-Title': 'MyloBot',
			'Main-Class': application.mainClass
		)
	}

	from {
		configurations.runtimeClasspath.collect {
			(it.isDirectory() || it.name[-3..-1] == 'pom') ? it : zipTree(it)
		}
	}
}
